--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   e.stopPropagation();
                   Swal.fire({
                       title: '一鍵包月',
-                      text: `是否要加入 ${item.date} (${wd}) 後續 3 週，每週 (${wd}) ${item.time} 時段的預約?`,
+                      text: `要加入 ${item.date} (${wd}) 後續 3 週禮拜 (${wd}) ${item.time} 時段的預約嗎?`,
                       icon: 'question',
                       showCancelButton: true,
                       confirmButtonText: '加入',
